@@ -1,3 +1,9 @@
+2003-02-21  Don Porter  <dgp@users.sourceforge.net>
+
+	* library/package.tcl (tclPkgUnknown):  Minor performance tweaks
+	to reduce the number of [file] invocations.  Meant to improve
+	startup times, at least a little bit.  [Patch 687906]
+
 2003-02-20  Daniel Steffen  <das@users.sourceforge.net>
 
 	* unix/tcl.m4:
